projects/vb6parse/snapshots/syntax/library/statements/stop/stop_multiple_on_same_line.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/stop.rs
assertion_line: 404
expression: tree
---
root:
  kind: Root
  children:
    - kind: StopStatement
      children:
        - kind: StopKeyword
          text: Stop
    - kind: ColonOperator
      text: ":"
    - kind: Whitespace
      text: " "
    - kind: StopStatement
      children:
        - kind: StopKeyword
          text: Stop
    - kind: Newline
      text: "\n"
